--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,10 @@ out/
 *.iml
 *.ipr
 *.iws
+
+##############################
+## Compressed Files
+##############################
+*.zip
+*.rar
+.7z
